--- a/index.html
+++ b/index.html
@@ -1,9 +1,117 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>SE</title>
-    </head>
-    <body>
-        <h1>hello</h1>
-    </body>
+
+<head>
+    <title>SE</title>
+    <link rel="stylesheet" href="./styles/style-sheet.css">
+</head>
+
+<body>
+    <div class="banner-container">
+        <!-- background image -->
+        <img src="./assets/images/banner.JPG" class="banner-image">
+    </div>
+
+    <div class="header">
+        <!-- the header -->
+        <div class="tl-icon-container">
+            <!-- top left icon -->
+            <img class="top-left-icon" src="./assets/icons/favicon.png">
+        </div>
+
+        <div class="spacer"></div>
+
+        <div class="menu">
+            <!-- header menu items  -->
+
+            <table>
+                <tr>
+                    <td>
+                        <div class="hmi-container">
+                            <p class="header-menu-item">Home</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="hmi-container">
+                            <p class="header-menu-item">Get Trained</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="hmi-container">
+                            <p class="header-menu-item">Hire Talent</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="hmi-container">
+                            <p class="header-menu-item">FAQs</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="hmi-container">
+                            <p class="header-menu-item">Blog</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="hmi-container">
+                            <p class="header-menu-item">About Us</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="hmi-container">
+                            <p class="header-menu-item">Contact</p>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            
+
+
+
+
+
+
+            <!-- <div class="hmi-container"> 
+                    <p class="header-menu-item">Home</p>
+                </div>
+                <div class="hmi-container"> 
+                    <p class="header-menu-item">Get Trained</p>
+                </div>
+                <div class="hmi-container"> 
+                    <p class="header-menu-item">Hire Talent</p>
+                </div>
+                <div class="hmi-container"> 
+                    <p class="header-menu-item">FAQs</p>
+                </div>
+                <div class="hmi-container"> 
+                    <p class="header-menu-item">Blog</p>
+                </div>
+                <div class="hmi-container"> 
+                    <p class="header-menu-item">About Us</p>
+                </div>
+                <div class="hmi-container"> 
+                    <p class="header-menu-item">Contact</p>
+                </div>
+                <div class="hmi-container"> 
+                    <p class="header-menu-item">Apply Now</p>
+                </div> -->
+        </div>
+        <div class="hmi-container">
+            <p class="text-button" style="margin-right: 100px;">Apply Now</p>
+        </div>
+        <!-- <div style="width: 8%;"></div> -->
+    </div>
+    
+    <div class="banner-left-data-container">
+        <div>
+            <span class="banner-title-1">Empowering youth<br> </span><span class="banner-title-2"> with tach jobs.</span>
+        </div>
+        <p class="banner-info">
+            SE Factory's top-ranked training programs graduate tech
+            professionals working for companies all over the world.
+        </p>
+    </div>
+    <div style="background-color: red; height: 1000px;"></div>
+
+</body>
+
 </html>
