Adding stats part

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <!-- <div style="width: 8%;"></div> -->
     </div>
-    
+
     <div class="banner-left-data-container">
         <div>
             <span class="banner-title-1">Empowering youth<br> </span><span class="banner-title-2"> with tach jobs.</span>
@@ -110,6 +110,33 @@
             professionals working for companies all over the world.
         </p>
     </div>
+
+
+    <div class="stats-container">
+        <div class="stats-left">
+            <div class="stats">90%</div>
+            <div class="stats-info">Employment<br>Success Rate</div>
+        </div>
+        <div class="stats-mid">
+            <div class="stats">500+</div>
+            <div class="stats-info"> Youth Trained<br>Since 2016</div>
+        </div>
+        <div class="stats-right">
+            <div class="stats">145+</div>
+            <div class="stats-info">Global Recruitment Partner Companies</div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
     <div style="background-color: red; height: 1000px;"></div>
 
 </body>
