--- a/index.html
+++ b/index.html
@@ -65,35 +65,6 @@
             </table>
             
 
-
-
-
-
-
-            <!-- <div class="hmi-container"> 
-                    <p class="header-menu-item">Home</p>
-                </div>
-                <div class="hmi-container"> 
-                    <p class="header-menu-item">Get Trained</p>
-                </div>
-                <div class="hmi-container"> 
-                    <p class="header-menu-item">Hire Talent</p>
-                </div>
-                <div class="hmi-container"> 
-                    <p class="header-menu-item">FAQs</p>
-                </div>
-                <div class="hmi-container"> 
-                    <p class="header-menu-item">Blog</p>
-                </div>
-                <div class="hmi-container"> 
-                    <p class="header-menu-item">About Us</p>
-                </div>
-                <div class="hmi-container"> 
-                    <p class="header-menu-item">Contact</p>
-                </div>
-                <div class="hmi-container"> 
-                    <p class="header-menu-item">Apply Now</p>
-                </div> -->
         </div>
         <div class="hmi-container">
             <p class="text-button" style="margin-right: 100px;">Apply Now</p>
@@ -115,15 +86,28 @@
     <div class="stats-container">
         <div class="stats-left">
             <div class="stats">90%</div>
-            <div class="stats-info">Employment<br>Success Rate</div>
+            <div class="stats-info">Employment<br>Success Rate<br>_</div>
         </div>
         <div class="stats-mid">
             <div class="stats">500+</div>
-            <div class="stats-info"> Youth Trained<br>Since 2016</div>
+            <div class="stats-info"> Youth Trained<br>Since 2016<br>_</div>
         </div>
         <div class="stats-right">
             <div class="stats">145+</div>
-            <div class="stats-info">Global Recruitment Partner Companies</div>
+            <div class="stats-info">Global Recruitment Partner Companies<br>_</div>
+        </div>
+    </div>
+
+    <div class="part-3">
+        <div class="part-3-image-container">
+            <img src="./assets/images/Artboard+4@2x-100.jpg" class="part-3-image">
+        </div>
+
+        <div class="part-3-data-container">
+            <div class="part-3-title-1">Get the skills</div>
+            <div class="part-3-title-2">companies look for.</div>
+            <div class="part-3-data">Learn how to become a professional Full Stack Web Developer. Acquire technical and interoersonal skills, and gain access to vast network of employers.</div>
+            <a href="" class="part-3-link">Learn more &#8594</a>
         </div>
     </div>
 
