Adding parts 5 till 8

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </td>
                 </tr>
             </table>
-            
+
 
         </div>
         <div class="hmi-container">
@@ -74,7 +74,8 @@
 
     <div class="banner-left-data-container">
         <div>
-            <span class="banner-title-1">Empowering youth<br> </span><span class="banner-title-2"> with tach jobs.</span>
+            <span class="banner-title-1">Empowering youth<br> </span><span class="banner-title-2"> with tach
+                jobs.</span>
         </div>
         <p class="banner-info">
             SE Factory's top-ranked training programs graduate tech
@@ -106,7 +107,8 @@
         <div class="part-3-data-container">
             <div class="part-3-title-1">Get the skills</div>
             <div class="part-3-title-2">companies look for.</div>
-            <div class="part-3-data">Learn how to become a professional Full Stack Web Developer. Acquire technical and interoersonal skills, and gain access to vast network of employers.</div>
+            <div class="part-3-data">Learn how to become a professional Full Stack Web Developer.
+                Acquire technical and interoersonal skills, and gain access to vast network of employers.</div>
             <a href="" class="part-3-link">Learn more &#8594</a>
         </div>
     </div>
@@ -127,7 +129,54 @@
     </div>
 
 
+    <div class="part-3">
+        <div class="part-3-image-container">
+            <img src="./assets/images/Artboard+4+copy@2x-100.jpg" class="part-3-image">
+        </div>
 
+        <div class="part-3-data-container">
+            <div class="part-3-title-1">Our graduates are</div>
+            <div class="part-3-title-2">market ready.</div>
+            <div class="part-3-data">Student go through deep technical training,
+                including robust theory and intensive coding,
+                with emphasis on critical thinking and a can-do attitude.</div>
+            <a href="" class="part-3-link">Learn more &#8594</a>
+        </div>
+    </div>
+
+
+    <div class="part-6">
+        <div class="part-6-1">Join our Global Recruitment Partner Network and access top talent wherever you are.</div>
+        <div class="part-6-2"> 150+ companies from over 10 countries have joined our network since 2016</div>
+        <img src="./assets/images/RP+partner+logos.jpg" class="part-6-image">
+    </div>
+
+    <div class="part-7">
+        <img src="./assets/images/Artboard+86@3x-100.jpg" class="part-7-image">
+    </div>
+
+
+    <div class="part-8">
+        <div class="part-8-title">In The Media</div>
+        <div class="part-8-list-container">
+            <img src="./assets/icons/9.png" class="part-8-icon">
+            <img src="./assets/icons/8.png" class="part-8-icon">
+            <img src="./assets/icons/3.png" class="part-8-icon">
+            <img src="./assets/icons/1.png" class="part-8-icon">
+            <img src="./assets/icons/2.png" class="part-8-icon">
+            <img src="./assets/icons/7.png" class="part-8-icon">
+            <img src="./assets/icons/5.png" class="part-8-icon">
+            <img src="./assets/icons/4.png" class="part-8-icon">
+        </div>
+    </div>
+
+
+    <div class="part-9">
+        <div class="part-9-title">Funding Partners</div>
+        <div class="part-9-image-container">
+            <img src="./assets/images/SEF_donors-01+(1).png" class="part-9-image">
+        </div>
+    </div>
 
 
 
