Finishing html+css

--- a/index.html
+++ b/index.html
@@ -173,19 +173,50 @@
 
     <div class="part-9">
         <div class="part-9-title">Funding Partners</div>
-        <div class="part-9-image-container">
-            <img src="./assets/images/SEF_donors-01+(1).png" class="part-9-image">
+        <img src="./assets/images/SEF_donors-01+(1).png" class="part-9-image">
+    </div>
+
+    <div style="width: 100%; text-align: center;">
+        <hr style="width: 85%;">
+    </div>
+
+
+    <div class="part-10">
+        <div class="part-8-title">Strategic Partners</div>
+        <div class="part-8-list-container">
+            <img src="./assets/images/image-asset.jpeg" class="part-10-icon">
+            <img src="./assets/images/6.jpg" class="part-10-icon">
+            <img src="./assets/images/3.jpg" class="part-10-icon">
+            <img src="./assets/images/8.jpg" class="part-10-icon">
         </div>
     </div>
 
 
 
+    <div class="part-11">
+        <div class="part-11-1">Subscribe to our newsletter</div>
+        <div class="part-11-2">and stay up-to-date with our latest news.</div>
+        <button class="sub-button">Subscribe</button>
+    </div>
 
 
-
-
-
-    <div style="background-color: red; height: 1000px; margin-top: 500px;"></div>
+    <footer class="footer-part">
+        <div class="footer-left">
+            <a href="" class="footer-link">Privacy Policy</a>
+        </div>
+        <div class="footer-mid">
+            <p class="footer-crc">Copyright © 2022 SE Factory SAL. All Rights Reserved.</p>
+        </div>
+        <div class="footer-right">
+            <div class="footer-icons">
+                <div class="spacer"></div>
+                <img src="./assets/icons/li-icon.PNG" class="ftr-icon">
+                <img src="./assets/icons/fb-icon.PNG" class="ftr-icon">
+                <img src="./assets/icons/ig-icon.PNG" class="ftr-icon">
+                <img src="./assets/icons/tw-icon.PNG" class="ftr-icon">
+            </div>
+        </div>
+    </footer>
 
 </body>
 
