--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             SE Factory's top-ranked training programs graduate tech
             professionals working for companies all over the world.
         </p>
+        <div class="hmi-container">
+            <p class="text-button" style="margin-right: 100px;">Learn More</p>
+        </div>
     </div>
 
 
@@ -146,7 +149,7 @@
 
 
     <div class="part-6">
-        <div class="part-6-1">Join our Global Recruitment Partner Network and access top talent wherever you are.</div>
+        <div class="part-6-1">Join our <span style="font-weight: bold;"> Global Recruitment Partner Network</span> and access top talent wherever you are.</div>
         <div class="part-6-2"> 150+ companies from over 10 countries have joined our network since 2016</div>
         <img src="./assets/images/RP+partner+logos.jpg" class="part-6-image">
     </div>
