Fixing the header

--- a/index.html
+++ b/index.html
@@ -4,87 +4,80 @@
 <head>
     <title>SE</title>
     <link rel="stylesheet" href="./styles/style-sheet.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+
+
+
+
+
     <div class="banner-container">
         <!-- background image -->
-        <img src="./assets/images/banner.JPG" class="banner-image">
+        <!-- <img src="./assets/images/banner.JPG" class="banner-image"> -->
+
+
+        <div class="topnav">
+
+            <div class="tl-icon-container">
+                <img class="top-left-icon" src="./assets/icons/favicon.png">
+            </div>
+            <div class="menu">
+                <div class="spacer"></div>
+                <div>
+                    <a>News</a>
+                </div>
+                <div>
+                    <a>News</a>
+                </div>
+                <div>
+                    <a>News</a>
+                </div>
+                <div>
+                    <a>News</a>
+                </div>
+                <div>
+                    <a>News</a>
+                </div>
+                <div>
+                    <a>News</a>
+                </div>
+                <div>
+                    <a>News</a>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
-    <div class="header">
-        <!-- the header -->
-        <div class="tl-icon-container">
-            <!-- top left icon -->
-            <img class="top-left-icon" src="./assets/icons/favicon.png">
-        </div>
-
-        <div class="spacer"></div>
-
-        <div class="menu">
-            <!-- header menu items  -->
-
-            <table>
-                <tr>
-                    <td>
-                        <div class="hmi-container">
-                            <p class="header-menu-item">Home</p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="hmi-container">
-                            <p class="header-menu-item">Get Trained</p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="hmi-container">
-                            <p class="header-menu-item">Hire Talent</p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="hmi-container">
-                            <p class="header-menu-item">FAQs</p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="hmi-container">
-                            <p class="header-menu-item">Blog</p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="hmi-container">
-                            <p class="header-menu-item">About Us</p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="hmi-container">
-                            <p class="header-menu-item">Contact</p>
-                        </div>
-                    </td>
-                </tr>
-            </table>
 
 
-        </div>
-        <div class="hmi-container">
-            <p class="text-button" style="margin-right: 100px;">Apply Now</p>
-        </div>
-        <!-- <div style="width: 8%;"></div> -->
-    </div>
 
-    <div class="banner-left-data-container">
-        <div>
-            <span class="banner-title-1">Empowering youth<br> </span><span class="banner-title-2"> with tach
-                jobs.</span>
-        </div>
-        <p class="banner-info">
-            SE Factory's top-ranked training programs graduate tech
-            professionals working for companies all over the world.
-        </p>
-        <div class="hmi-container">
-            <p class="text-button" style="margin-right: 100px;">Learn More</p>
-        </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <div class="stats-container">
@@ -149,7 +142,8 @@
 
 
     <div class="part-6">
-        <div class="part-6-1">Join our <span style="font-weight: bold;"> Global Recruitment Partner Network</span> and access top talent wherever you are.</div>
+        <div class="part-6-1">Join our <span style="font-weight: bold;"> Global Recruitment Partner Network</span> and
+            access top talent wherever you are.</div>
         <div class="part-6-2"> 150+ companies from over 10 countries have joined our network since 2016</div>
         <img src="./assets/images/RP+partner+logos.jpg" class="part-6-image">
     </div>
