Updataing HTML+CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>SE</title>
     <link rel="stylesheet" href="./styles/style-sheet.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -24,32 +23,39 @@
             <div class="tl-icon-container">
                 <img class="top-left-icon" src="./assets/icons/favicon.png">
             </div>
-            <div class="menu">
-                <div class="spacer"></div>
-                <div>
-                    <a>News</a>
-                </div>
-                <div>
-                    <a>News</a>
-                </div>
-                <div>
-                    <a>News</a>
-                </div>
-                <div>
-                    <a>News</a>
-                </div>
-                <div>
-                    <a>News</a>
-                </div>
-                <div>
-                    <a>News</a>
-                </div>
-                <div>
-                    <a>News</a>
-                </div>
 
+            <div class="spacer"></div>
+
+            <div class="menu"> 
+                <div class="header-menu-item">Home</div>
+                <div class="header-menu-item">Get Trained</div>
+                <div class="header-menu-item">Hire Talent</div>
+                <div class="header-menu-item">FAQs</div>
+                <div class="header-menu-item">Blog</div>
+                <div class="header-menu-item">AboutUs</div>
+                <div class="header-menu-item">Contact</div>
+                <button class="apply-button">Apply Now</button>
             </div>
         </div>
+
+
+
+
+        <div class="banner-left-data-container">
+            <div>
+                <span class="banner-title-1">Empowering youth<br> </span><span class="banner-title-2"> with tach
+                    jobs.</span>
+            </div>
+            <p class="banner-info">
+                SE Factory's top-ranked training programs graduate tech
+                professionals working for companies all over the world.
+            </p>
+            <div class="hmi-container">
+                <button class="apply-button">Learn More</button>
+            </div>
+        </div>
+
+
 
     </div>
 
