--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 
     <div class="banner-container">
-        <!-- background image -->
-        <!-- <img src="./assets/images/banner.JPG" class="banner-image"> -->
 
 
         <div class="topnav">
@@ -35,6 +33,19 @@
                 <div class="header-menu-item">AboutUs</div>
                 <div class="header-menu-item">Contact</div>
                 <button class="apply-button">Apply Now</button>
+            </div>
+        </div>
+
+
+        <div class="topnav-replace">
+            <div class="tl-icon-container">
+                <img class="top-left-icon" src="./assets/icons/favicon.png">
+            </div>
+
+            <div class="spacer"></div>
+
+            <div class="icon-replace">   
+                <i class="gg-menu"></i> <!--  Borrowed from here :) https://css.gg/menu -->
             </div>
         </div>
 
@@ -78,29 +89,29 @@
 
 
 
-    <div class="part-3">
-        <div class="part-3-image-container">
-            <img src="./assets/images/Artboard+4@2x-100.jpg" class="part-3-image">
+    <div class="img-with-para">
+        <div class="img-with-para-image-container">
+            <img src="./assets/images/Artboard+4@2x-100.jpg" class="img-with-para-image">
         </div>
 
-        <div class="part-3-data-container">
-            <div class="part-3-title-1">Get the skills</div>
-            <div class="part-3-title-2">companies look for.</div>
-            <div class="part-3-data">Learn how to become a professional Full Stack Web Developer.
+        <div class="img-with-para-data-container">
+            <div class="img-with-para-title-1">Get the skills</div>
+            <div class="img-with-para-title-2">companies look for.</div>
+            <div class="img-with-para-data">Learn how to become a professional Full Stack Web Developer.
                 Acquire technical and interoersonal skills, and gain access to vast network of employers.</div>
-            <a href="" class="part-3-link">Learn more &#8594</a>
+            <a href="" class="img-with-para-link">Learn more &#8594</a>
         </div>
     </div>
 
 
-    <div class="part-4">
-        <div class="part-4-title-1">Discover the program</div>
-        <div class="part-4-title-2">that's right for you.</div>
-        <div class="part-4-image-container">
-            <div class="part-4-image-1-container">
+    <div class="discover-part">
+        <div class="discover-part-title-1">Discover the program</div>
+        <div class="discover-part-title-2">that's right for you.</div>
+        <div class="discover-part-image-container">
+            <div class="discover-part-image-1-container">
                 <img src="./assets/images/Artboard+6@4x.png" class="p4im1">
             </div>
-            <div class="part-4-image-2-container">
+            <div class="discover-part-image-2-container">
                 <img src="./assets/images/Artboard+7@4x.png" class="p4im2">
             </div>
         </div>
@@ -108,27 +119,27 @@
     </div>
 
 
-    <div class="part-3">
-        <div class="part-3-image-container">
-            <img src="./assets/images/Artboard+4+copy@2x-100.jpg" class="part-3-image">
+    <div class="img-with-para">
+        <div class="img-with-para-image-container">
+            <img src="./assets/images/Artboard+4+copy@2x-100.jpg" class="img-with-para-image">
         </div>
 
-        <div class="part-3-data-container">
-            <div class="part-3-title-1">Our graduates are</div>
-            <div class="part-3-title-2">market ready.</div>
-            <div class="part-3-data">Student go through deep technical training,
+        <div class="img-with-para-data-container">
+            <div class="img-with-para-title-1">Our graduates are</div>
+            <div class="img-with-para-title-2">market ready.</div>
+            <div class="img-with-para-data">Student go through deep technical training,
                 including robust theory and intensive coding,
                 with emphasis on critical thinking and a can-do attitude.</div>
-            <a href="" class="part-3-link">Learn more &#8594</a>
+            <a href="" class="img-with-para-link">Learn more &#8594</a>
         </div>
     </div>
 
 
-    <div class="part-6">
-        <div class="part-6-1">Join our <span style="font-weight: bold;"> Global Recruitment Partner Network</span> and
+    <div class="partner-network-part">
+        <div class="partner-network-part-title-1">Join our <span style="font-weight: bold;"> Global Recruitment Partner Network</span> and
             access top talent wherever you are.</div>
-        <div class="part-6-2"> 150+ companies from over 10 countries have joined our network since 2016</div>
-        <img src="./assets/images/RP+partner+logos.jpg" class="part-6-image">
+        <div class="partner-network-part-title-2"> 150+ companies from over 10 countries have joined our network since 2016</div>
+        <img src="./assets/images/RP+partner+logos.jpg" class="partner-network-part-image">
     </div>
 
     <div class="part-7">
@@ -136,46 +147,46 @@
     </div>
 
 
-    <div class="part-8">
-        <div class="part-8-title">In The Media</div>
-        <div class="part-8-list-container">
-            <img src="./assets/icons/9.png" class="part-8-icon">
-            <img src="./assets/icons/8.png" class="part-8-icon">
-            <img src="./assets/icons/3.png" class="part-8-icon">
-            <img src="./assets/icons/1.png" class="part-8-icon">
-            <img src="./assets/icons/2.png" class="part-8-icon">
-            <img src="./assets/icons/7.png" class="part-8-icon">
-            <img src="./assets/icons/5.png" class="part-8-icon">
-            <img src="./assets/icons/4.png" class="part-8-icon">
+    <div class="media-part">
+        <div class="multi-title">In The Media</div>
+        <div class="multi-list-container">
+            <img src="./assets/icons/9.png" class="multi-icon">
+            <img src="./assets/icons/8.png" class="multi-icon">
+            <img src="./assets/icons/3.png" class="multi-icon">
+            <img src="./assets/icons/1.png" class="multi-icon">
+            <img src="./assets/icons/2.png" class="multi-icon">
+            <img src="./assets/icons/7.png" class="multi-icon">
+            <img src="./assets/icons/5.png" class="multi-icon">
+            <img src="./assets/icons/4.png" class="multi-icon">
         </div>
     </div>
 
 
-    <div class="part-9">
-        <div class="part-9-title">Funding Partners</div>
-        <img src="./assets/images/SEF_donors-01+(1).png" class="part-9-image">
+    <div class="funding-partners-part">
+        <div class="multi-title">Funding Partners</div>
+        <img src="./assets/images/SEF_donors-01+(1).png" class="funding-partners-part-image">
     </div>
 
     <div style="width: 100%; text-align: center;">
         <hr style="width: 85%;">
     </div>
+    
 
-
-    <div class="part-10">
-        <div class="part-8-title">Strategic Partners</div>
-        <div class="part-8-list-container">
-            <img src="./assets/images/image-asset.jpeg" class="part-8-icon">
-            <img src="./assets/images/6.jpg" class="part-8-icon">
-            <img src="./assets/images/3.jpg" class="part-8-icon">
-            <img src="./assets/images/8.jpg" class="part-8-icon">
+    <div class="strat-partners-part">
+        <div class="multi-title">Strategic Partners</div>
+        <div class="multi-list-container">
+            <img src="./assets/images/image-asset.jpeg" class="multi-icon">
+            <img src="./assets/images/6.jpg" class="multi-icon">
+            <img src="./assets/images/3.jpg" class="multi-icon">
+            <img src="./assets/images/8.jpg" class="multi-icon">
         </div>
     </div>
 
 
 
-    <div class="part-11">
-        <div class="part-11-1">Subscribe to our newsletter</div>
-        <div class="part-11-2">and stay up-to-date with our latest news.</div>
+    <div class="sub-part">
+        <div class="sub-part-title-1">Subscribe to our newsletter</div>
+        <div class="sub-part-title-2">and stay up-to-date with our latest news.</div>
         <button class="sub-button">Subscribe</button>
     </div>
 
@@ -190,10 +201,7 @@
         <div class="footer-right">
             <div class="footer-icons">
                 <div class="spacer"></div>
-                <img src="./assets/icons/li-icon.PNG" class="ftr-icon">
-                <img src="./assets/icons/fb-icon.PNG" class="ftr-icon">
-                <img src="./assets/icons/ig-icon.PNG" class="ftr-icon">
-                <img src="./assets/icons/tw-icon.PNG" class="ftr-icon">
+                <img src="./assets/icons/socials.PNG" class="ftr-icon">
             </div>
         </div>
     </footer>
