Adding some touches

--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
 <body>
 
 
-
-
-
     <div class="banner-container">
-
-
-        <div class="topnav">
+        <div class="topnav"> <!-- the normal nav bar (large screen)-->
 
             <div class="tl-icon-container">
                 <img class="top-left-icon" src="./assets/icons/favicon.png">
@@ -37,7 +32,7 @@
         </div>
 
 
-        <div class="topnav-replace">
+        <div class="topnav-replace">  <!-- replaces the main navbar when screen < 1000px -->
             <div class="tl-icon-container">
                 <img class="top-left-icon" src="./assets/icons/favicon.png">
             </div>
@@ -50,9 +45,7 @@
         </div>
 
 
-
-
-        <div class="banner-left-data-container">
+        <div class="banner-left-data-container"> <!-- the text on the banner image -->
             <div>
                 <span class="banner-title-1">Empowering youth<br> </span><span class="banner-title-2"> with tach
                     jobs.</span>
@@ -65,10 +58,10 @@
                 <button class="apply-button">Learn More</button>
             </div>
         </div>
-
-
-
     </div>
+
+
+        <!-- everything else is self-explanatory (hopefully) -->
 
 
     <div class="stats-container">
@@ -89,6 +82,7 @@
 
 
 
+
     <div class="img-with-para">
         <div class="img-with-para-image-container">
             <img src="./assets/images/Artboard+4@2x-100.jpg" class="img-with-para-image">
@@ -104,6 +98,9 @@
     </div>
 
 
+
+
+
     <div class="discover-part">
         <div class="discover-part-title-1">Discover the program</div>
         <div class="discover-part-title-2">that's right for you.</div>
@@ -117,6 +114,9 @@
         </div>
 
     </div>
+
+
+
 
 
     <div class="img-with-para">
@@ -135,6 +135,9 @@
     </div>
 
 
+
+
+
     <div class="partner-network-part">
         <div class="partner-network-part-title-1">Join our <span style="font-weight: bold;"> Global Recruitment Partner Network</span> and
             access top talent wherever you are.</div>
@@ -142,9 +145,16 @@
         <img src="./assets/images/RP+partner+logos.jpg" class="partner-network-part-image">
     </div>
 
-    <div class="part-7">
-        <img src="./assets/images/Artboard+86@3x-100.jpg" class="part-7-image">
+
+
+
+
+    <div class="quote-part">
+        <img src="./assets/images/Artboard+86@3x-100.jpg" class="quote-part-image">
     </div>
+
+
+
 
 
     <div class="media-part">
@@ -162,15 +172,25 @@
     </div>
 
 
+
+
+
     <div class="funding-partners-part">
         <div class="multi-title">Funding Partners</div>
         <img src="./assets/images/SEF_donors-01+(1).png" class="funding-partners-part-image">
     </div>
 
+
+
+
+
     <div style="width: 100%; text-align: center;">
         <hr style="width: 85%;">
     </div>
-    
+
+
+
+
 
     <div class="strat-partners-part">
         <div class="multi-title">Strategic Partners</div>
@@ -184,11 +204,16 @@
 
 
 
+
+
     <div class="sub-part">
         <div class="sub-part-title-1">Subscribe to our newsletter</div>
         <div class="sub-part-title-2">and stay up-to-date with our latest news.</div>
         <button class="sub-button">Subscribe</button>
     </div>
+
+
+
 
 
     <footer class="footer-part">
